# pico-project-framework

./: .gitignore  .gitmodules  README.md  apply_freertos_patch.sh  export.sh
pico-freertos/: 0001-add-xPortIsInsideInterrupt.patch  CMakeLists.txt  FreeRTOSConfig.h
projects/: .gitkeep
projects/example/: CMakeLists.txt  main.c
projects/example_freertos/: CMakeLists.txt  main.c
projects/example_tev/: CMakeLists.txt  main.c
